[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/witch.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player/witch_wand.png" type="Texture" id=3]
[ext_resource path="res://Entities/Player/PlayerFSM.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.09737
height = 8.23731

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.9893
height = 15.5466

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.1496
height = 6.10226

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]
length = 0.75
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 2 )
z_index = 1
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( 0, -7.94101 )
z_index = 1
texture = ExtResource( 2 )
hframes = 3

[node name="Arm" type="Area2D" parent="Body/Sprite"]
input_pickable = false
collision_layer = 2
collision_mask = 5

[node name="SpriteWand" type="Sprite" parent="Body/Sprite/Arm"]
position = Vector2( -0.842506, -2.47247 )
z_index = -1
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Sprite/Arm"]
position = Vector2( 15.2299, 6.7543 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="WandPoint" type="Position2D" parent="Body/Sprite/Arm"]
position = Vector2( 24.1575, 6.02753 )

[node name="StandCollision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2( -1, -9.70628 )
shape = SubResource( 2 )

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 1.82928 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpPressedTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 4 )
anims/Idle = SubResource( 5 )

[node name="Raycasts" type="Node2D" parent="."]
visible = false

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( 4.23177, 0.556816 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( -1.7818, 0.556808 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="CanStandRaycasts" type="Node2D" parent="."]
visible = false

[node name="CanStandRaycast" type="RayCast2D" parent="CanStandRaycasts"]
position = Vector2( -15.8829, -10.0545 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 30 )

[node name="CanStandRaycast2" type="RayCast2D" parent="CanStandRaycasts"]
position = Vector2( 0.586933, -10.0404 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 30 )

[node name="CanStandRaycast3" type="RayCast2D" parent="CanStandRaycasts"]
position = Vector2( 15.6963, -9.43608 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Label" type="Label" parent="."]
margin_left = -37.0
margin_top = -49.0
margin_right = 4.0
margin_bottom = -35.0
grow_vertical = 0
text = "sfdsg"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 4.28538
margin_top = -49.248
margin_right = 45.2854
margin_bottom = -35.248
grow_vertical = 0
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="JumpPressedTimer" to="." method="_on_JumpPressedTimer_timeout"]
